# cj132

./: .gitignore  README.md  params.xlsx  pyproject.toml  run.py
Interactives/: Newtons_Method_Interactive.html  solar_array_bypass_blocks.html  solar_block_bypass_series.html
Notes/: Change_Set_Topology_and_Voltage.html  Chapter1_Solar_Array_Framework.html  Chapter2_New_Implementation.html  Chapter3_Plain_Language_Companion.html  Chapter4_Panel_Plane_Heat_Spreading.html  Chapter5_The_Bounce_Slowly.html  Chapter6_Worked_By_Hand.html  Chapter7_Vectorising_Gently.html  Concept_and_Evolution_Handbook.html  PowerPy_Code_Listing.html  PowerPy_Cookbook_50_UseCases.html  PowerPy_Framework_Explained.html  Software_Design_and_Performance.html  _build_ch1.py  _build_ch2.py  _build_ch6_compute.py  _build_code_pdf.py  _build_cookbook.py  _build_d.py  _build_diff_pdf.py  _build_framework_figs.py  _build_panel_demo.py  _divcheck.py  _fix_terms.py  _fixplots.py  _frag_D1.html  _frag_D2.html  _frag_D3.html  _frag_D4.html  _frag_D5.html  _frag_D6.html  _frag_P1.html  _frag_P2.html  _frag_P3.html  _frag_P4.html  _frag_P5.html  _frag_P6.html  _frag_P7.html  _frag_P8.html  _frag_Q1.html  (+42 more)
docs/: CELL_PY_REPAIR.md  NEW_MODULES.md  PANEL_LAYOUT_CONVENTION.md  RUNNING_WITHOUT_PIP.md  powerpy_framework_presentation.html
examples/: build_grid_reports.py  build_noNG_elec_report.py  run_montecarlo.py
scripts/: _gen_build_params.py  add_analysis_sheet.py  add_requirement_sheet.py  build_params.py  build_sample_params.py  edit_structure.py  set_mission_orbit.py  setup_sim.py  split_params.py  (+1 more)
(+207 files in other folders)
